DOMjudge Programming Contest Judging System

Version 5.0.0 - DEV
-------------------

Version 5.0.0 Release Candidate 1 - 7 July 2015
-----------------------------------------------
 - Add support for the problemarchive.org problem package format, thereby
   dropping support for our custom format. In particular, the specification
   of compare scripts has changed.
 - Add support for multiple simultaneous contests.
 - Add support for HTML5 desktop notifications of clarifications,
   judgings and judgehost status (#133).
 - Add support for optional user self-registration.
 - Add support for problem points, allowing one to assign different
   scoring weights to diffent problems in a contest.
 - Add selection options for rejudging, and preview rejudging results
   before applying them.
 - Add optional per problem memory/output limits (Closes #152).
 - Apply runguard limits also to compare scripts (#68).
 - In runguard, kill all remaing processes in the cgroup at the end
   of the run; preventing leftover processes in corner cases like
   detaching from itself.
 - Allow to add restrictions on contests, problems and languages to
   judgehosts.
 - Allow judgedaemons to query multiple domservers.
 - Allow storing optional descriptive image for each test case.
 - Add support for accounts.tsv import, results.tsv and userdata.tsv export.
 - Add support for additional per-team penalty time (can be negative).
 - Move checktestdata to stand-alone repository.
 - Update dj_make_ubuntu_chroot to Trusty (#139, thanks Ruud Koot).
 - Fix diff display on team submission output page when showing the
   result of sample testcases is enabled (#137, thanks Ruud Koot).
 - In Haskell run script, set maximum stack size to someting small to
   prevent ghc from running out of memory (#138, thanks Ruud Koot).
 - Update ACE editor to 1.1.6, JScolor to 1.4.3.
 - Improve installation on and documentation for Red Hat(like) Linux.
 - Root is not required anymore for 'make install'.