@@ -224,12 +224,6 @@ oplossing niet correct is, maar let ook goed op dat je de antwoorden
 precies zoals beschreven uitvoert: de uitvoer moet exact kloppen met
 de specificatie van de jury!
 
-\item[PRESENTATION-ERROR]
-De uitvoer van je programma verschilde slechts in presentatie
-(bijvoorbeeld: de hoeveelheid witruimte) met de correcte uitvoer.
-Dit wordt net als WRONG-ANSWER niet correct gerekend. Deze uitslag
-is optioneel en mogelijk niet aangezet.
-
 \item[TOO-LATE]
 Helaas, je hebt ingestuurd nadat de wedstrijd al afgelopen was!
 Je inzending is opgeslagen maar wordt niet verder behandeld.
