@@ -209,12 +209,6 @@ The output of your program was incorrect. This can happen simply
 because your solution is not correct, but remember that your output
 must comply exactly with the specifications of the jury.
 
-\item[PRESENTATION-ERROR]
-The output of your program has differences in presentation with the
-correct results (for example in the amount of whitespace). This will,
-like WRONG-ANSWER, count as an incorrect submission. This result is
-optional and might be disabled.
-
 \item[TOO-LATE]
 Bummer, you submitted after the contest ended! Your submission is
 stored but will not be processed anymore.
