@@ -1,9 +1,8 @@
 /*
  * This should give CORRECT or WRONG-ANSWER on the default problem
  * 'hello' depending on whether lf-cr line ending is ok.
- * Can also return PRESENTATION-ERROR if enabled.
  *
- * @EXPECTED_RESULTS@: CORRECT,WRONG-ANSWER,PRESENTATION-ERROR
+ * @EXPECTED_RESULTS@: CORRECT,WRONG-ANSWER
  */
 
 #include <stdio.h>
